--- a/src/App.scss
+++ b/src/App.scss
@@ -2,12 +2,14 @@
 @import url('https://rsms.me/inter/inter.css');
 $font-family-base: 'Inter', sans-serif;
 
+/* Base Styles */
 body {
   background-color: #F9FAFC !important;
 }
 .description,
 .description .form-control {
   font-size: 1.5rem;
+  color: #0A1323 !important;
 }
 
 /* Logo */
@@ -30,46 +32,135 @@ button {
   border: none;
   background: none;
 }
-.invisible {
-  opacity: 0;
+// .invisible {
+//   opacity: 0;
+//   position: absolute;
+// }
+// Hide screen reader labels
+.invisible,
+.sr-only {
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
   position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+// Input Focus
+*:focus {
+  border: 0 !important;
+  box-shadow: none !important;
+}
+// Placeholder text
+$placeholder-text: #848791;
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: $placeholder-text;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: $placeholder-text;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: $placeholder-text;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: $placeholder-text;
+}
+// Timeframe select list
+.time-frame {
+  border-radius: 6.25rem !important;
+  border-width: 0 !important;
+}
+.today .time-frame {
+  background: rgba(255, 0, 110, 0.08);
+  color: #FF006E;
+}
+.tomorrow .time-frame {
+  background: rgba(251, 86, 7, 0.08);
+  color: #FB5607;
+}
+.thisWeek .time-frame {
+  background: rgba(255, 190, 11, 0.08);
+  color: #FFBE0B;
+}
+.noDate .time-frame {
+  background: #F9FAFB;
+  color: #6B6F7C;
+}
+.completed .time-frame {
+  background: rgba(3, 206, 164, 0.04);
+  color: #03CEA4;
+}
+
+/* General layout */
+.col.last {
+  text-align: right;
 }
 
 /* New Todo form */
 #newTodo {
-  padding: .55rem;
+  padding: 1.2rem;
   background: #FFFFFF;
   box-shadow: 0px 4px 8px #EBEEF5;
   border-radius: 12px;
 }
+#newTodo:focus-within {
+  box-shadow: 0px 4px 32px #DAE0EC;
+}
+#newTodo.today:focus-within {
+  box-shadow: 0px 4px 32px rgba(255, 0, 110, 0.12);
+}
+#newTodo.tomorrow:focus-within {
+  box-shadow: 0px 4px 32px rgba(251, 86, 7, 0.12);
+}
+#newTodo.thisWeek:focus-within {
+  box-shadow: 0px 4px 32px rgba(255, 190, 11, 0.12);
+}
 #newTodo .description {
-  padding-left: 2rem;
+  padding-left: 1.5rem;
 }
 input[type=text].form-control {
   border: none !important;
 } 
+#newTodo .time-frame {
+  margin: 0.375rem 0.75rem; // Match form-control padding
+}
 #newTodo .btn {
-  width: 48px;
-  height: 48px;
-  padding: 0;
+  border-radius: 50%;
   border: 0;
+  width: 3rem;
+  height: 3rem;
+  padding: 0;
   // background: url(/images/plus-circle.svg) no-repeat center center;
   background: none;
 }
-#newTodo .btn svg .plus-circle {
-  fill: #F9FAFB;
-}
-#newTodo .btn svg .plus {
+// Plus color
+#newTodo .btn .plus {
   stroke: #9D9FA7;
 }
+#newTodo.today .btn .plus,
+#newTodo.tomorrow .btn .plus,
+#newTodo.thisWeek .btn .plus,
+#newTodo.noDate .btn .plus {
+  stroke: white;
+}
+// Circle color
+#newTodo .btn .plus-circle {
+  fill: #F9FAFB;
+}
+#newTodo.today .btn .plus-circle {
+  fill: #FF006E;
+}
+#newTodo.tomorrow .btn .plus-circle {
+  fill: #FB5607;
+}
+#newTodo.thisWeek .btn .plus-circle {
+  fill: #FFBE0B;
+}
+#newTodo.noDate .btn .plus-circle {
+  fill: #3D404B;
+}
 
-/* Color Variations */
-#newTodo.today {
-  box-shadow: 0px 4px 32px rgba(255, 0, 110, 0.12);
-}
-#newTodo.today .btn img {
-  background: #FF006E;
-}
 
 /* Todo Lists */
 .lists {
@@ -95,7 +186,7 @@ input[type=text].form-control {
   padding: 0;
 }
 .todo {
-  padding: .5rem;
+  padding: 1.2rem;
 }
 .completeButton {
   margin-left: 1.25rem;
