--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,13 @@
 @import url('https://rsms.me/inter/inter.css');
 $font-family-base: 'Inter', sans-serif;
 
+// Colors
+$today-color: #FF006E;
+$tomorrow-color: #FB5607;
+$thisWeek-color: #FFBE0B;
+$noDate-color: #9D9FA7;
+$completed-color: #03CEA4;
+
 /* Base Styles */
 body {
   background-color: #F9FAFC !important;
@@ -73,15 +80,15 @@ $placeholder-text: #848791;
 }
 .today .time-frame {
   background: rgba(255, 0, 110, 0.08);
-  color: #FF006E;
+  color: $today-color;
 }
 .tomorrow .time-frame {
   background: rgba(251, 86, 7, 0.08);
-  color: #FB5607;
+  color: $tomorrow-color;
 }
 .thisWeek .time-frame {
   background: rgba(255, 190, 11, 0.08);
-  color: #FFBE0B;
+  color: $thisWeek-color;
 }
 .noDate .time-frame {
   background: #F9FAFB;
@@ -89,12 +96,15 @@ $placeholder-text: #848791;
 }
 .completed .time-frame {
   background: rgba(3, 206, 164, 0.04);
-  color: #03CEA4;
+  color: $completed-color
 }
 
 /* General layout */
 .col.last {
   text-align: right;
+}
+.completeButton {
+  padding-left: 0 !important;
 }
 
 
@@ -150,7 +160,7 @@ input[type=text].form-control {
   fill: #F9FAFB;
 }
 #newTodo.today .btn .plus-circle {
-  fill: #FF006E;
+  fill: $today-color;
 }
 #newTodo.tomorrow .btn .plus-circle {
   fill: #FB5607;
@@ -171,6 +181,9 @@ input[type=text].form-control {
   font-weight: 600;
   font-size: 1.5rem;
   line-height: 2rem;
+  letter-spacing: -0.02em;
+  padding: 0 0 0 4rem;
+  margin-bottom: 0;
 }
 .lists .heading {
   padding: 1.56rem;
@@ -180,6 +193,48 @@ input[type=text].form-control {
   box-shadow: 0px 4px 8px #EBEEF5;
   border-radius: 12px;
 }
+.list .count {
+  font-size: 1.125rem;
+  color: #6B6F7C;
+}
+.today h2 {
+  color: $today-color;
+  background: url(/images/inbox.svg) no-repeat left center;
+  fill: $today-color;
+}
+.tomorrow h2 {
+  color: $tomorrow-color;
+  background: url(/images/sun.svg) no-repeat left center;
+  fill: $tomorrow-color;
+}
+.thisWeek h2 {
+  color: $thisWeek-color;
+  background: url(/images/calendar.svg) no-repeat left center;
+  fill: $thisWeek-color;
+}
+.noDate h2 {
+  color: $noDate-color;
+  background: url(/images/folder.svg) no-repeat left center;
+  fill: $noDate-color;
+}
+.completed h2 {
+  color: $completed-color;
+  background: url(/images/check-circle.svg) no-repeat left center;
+  fill: $completed-color;
+}
+
+
+// header h1 {
+//   padding: 0.625rem 0 0.625rem 3.75rem;
+//   width: 6.375rem;
+//   background: url(/images/logo.svg) no-repeat left center;
+//   font-weight: 600;
+//   font-size: 1.5rem;
+//   line-height: 1.8rem;
+//   letter-spacing: -0.02em;
+//   margin: auto;
+// }
+
 
 
 /* Completed */
