--- a/src/App.scss
+++ b/src/App.scss
@@ -2,12 +2,14 @@
 @import url('https://rsms.me/inter/inter.css');
 $font-family-base: 'Inter', sans-serif;
 
-// Colors
+/* Todo Colors */
 $today-color: #FF006E;
 $tomorrow-color: #FB5607;
 $thisWeek-color: #FFBE0B;
 $noDate-color: #9D9FA7;
 $completed-color: #03CEA4;
+$default-shadow-color: #EBEEF5;
+$placeholder-color: #848791;
 
 /* Base Styles */
 body {
@@ -68,18 +70,17 @@ input[type=text].form-control {
   box-shadow: none !important;
 }
 // Placeholder text
-$placeholder-text: #848791;
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: $placeholder-text;
+  color: $placeholder-color;
 }
 ::-moz-placeholder { /* Firefox 19+ */
-  color: $placeholder-text;
+  color: $placeholder-color;
 }
 :-ms-input-placeholder { /* IE 10+ */
-  color: $placeholder-text;
+  color: $placeholder-color;
 }
 :-moz-placeholder { /* Firefox 18- */
-  color: $placeholder-text;
+  color: $placeholder-color;
 }
 // Timeframe select list
 .time-frame {
@@ -118,7 +119,7 @@ $placeholder-text: #848791;
 #newTodo {
   padding: 1.2rem 1.2rem 1.2rem 2rem;
   background: #FFFFFF;
-  box-shadow: 0px 4px 8px #EBEEF5;
+  box-shadow: 0px 4px 8px $default-shadow-color;
   border-radius: 12px;
 }
 #newTodo:focus-within {
@@ -140,15 +141,15 @@ $placeholder-text: #848791;
   margin: 0.375rem 0; // Match form-control padding
 }
 #newTodo .add-todo {
-  border-radius: 50%;
   border: 0;
+  width: 3rem;
   height: 3rem;
-  padding-left: 0;
+  padding: 0;
   background: none;
 }
 // Plus color
 #newTodo .add-todo .plus {
-  stroke: #9D9FA7;
+  stroke: $noDate-color;
 }
 #newTodo.today .add-todo .plus,
 #newTodo.tomorrow .add-todo .plus,
@@ -191,7 +192,7 @@ $placeholder-text: #848791;
 }
 .list {
   background: #FFFFFF;
-  box-shadow: 0px 4px 8px #EBEEF5;
+  box-shadow: 0px 4px 8px $default-shadow-color;
   border-radius: 12px;
 }
 .list .count {
@@ -243,7 +244,7 @@ $placeholder-text: #848791;
 }
 
 #complete-container h3.none {
-  color: #848791;
+  color: $placeholder-color;
 }
 
 
@@ -254,7 +255,7 @@ $placeholder-text: #848791;
 }
 .todo {
   padding: 1.2rem 1.2rem 1.2rem 1.2rem;
-  box-shadow: 0px 1px 0px #EBEEF5;
+  box-shadow: 0px 1px 0px $default-shadow-color;
 }
 .todo:last-child {
   box-shadow: none;
@@ -266,7 +267,7 @@ $placeholder-text: #848791;
   width: 4rem !important;
   flex: 0 0 4rem !important;
 }
-.complete {
+.complete-todo button {
   width: 2.25rem;
   height: 2.25rem;
   background-color: white;
@@ -274,7 +275,7 @@ $placeholder-text: #848791;
   border-radius: 50%;
   display: inline-block;
 }
-.completed .complete {
+.completed .complete-todo button {
   border-color: $completed-color;
 }
 .delete-todo {
@@ -283,4 +284,3 @@ $placeholder-text: #848791;
 
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
-
