--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,9 @@ body {
 .lists .description {
   padding-left: 0 !important;
 }
+.lists.container {
+  padding: 0 1.2rem;
+}
 @media (max-width: 768px) { 
   .lists .description {
     padding-bottom: 0.75rem;
@@ -53,6 +56,18 @@ button {
 input[type=text].form-control {
   border: none !important;
 } 
+// Reset icon buttons
+#newTodo .add-todo,
+.delete-todo.btn {
+  border: none !important;
+  background: none !important;
+  border-radius: 50%;
+}
+// Add border to activate focus button animation
+#newTodo .add-todo:focus,
+.delete-todo.btn:focus {
+  border: 1px solid white !important;
+}
 // Hide screen reader labels
 .invisible,
 .sr-only {
@@ -118,7 +133,7 @@ input[type=text].form-control {
 
 /* New Todo form */
 #newTodo {
-  padding: 1.2rem 1.2rem 1.2rem 2rem;
+  padding: 1.2rem 2.1375rem 1.2rem 2rem; // Match lists container
   background: #FFFFFF;
   box-shadow: 0px 4px 8px $default-shadow-color;
   border-radius: 12px;
@@ -142,12 +157,12 @@ input[type=text].form-control {
   margin: 0.375rem 0; // Match form-control padding
 }
 #newTodo .add-todo {
-  border: 0;
+  // border: 0;
   width: 3rem;
   height: 3rem;
   padding: 0;
-  background: none;
-  border-radius: 50%
+  // background: none;
+  // border-radius: 50%;
 }
 // Plus color
 #newTodo .add-todo .plus {
@@ -269,19 +284,30 @@ input[type=text].form-control {
   width: 4rem !important;
   flex: 0 0 4rem !important;
 }
-.complete-todo button {
+.complete-todo .btn {
   width: 2.25rem;
   height: 2.25rem;
-  background-color: white;
-  border: 2px solid #E4E8F1;
+  background-color: white !important;
+  border: 2px solid #E4E8F1 !important;
   border-radius: 50%;
   display: inline-block;
 }
-.completed .complete-todo button {
-  border-color: $completed-color;
+.completed .complete-todo .btn {
+  border-color: $completed-color !important;
+  // background-color: white;
+  padding: 0;
 }
-.delete-todo {
+.complete-todo .btn:focus {
+  background-color: white !important;
+  border: 2px solid #E4E8F1 !important;
+}
+
+// .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary
+
+.delete-todo.btn {
   padding-top: 0.3125rem;
+  // background: none !important;
+  // border: none !important;
 }
 
 // Import Bootstrap and its default variables
