--- a/src/App.scss
+++ b/src/App.scss
@@ -87,16 +87,16 @@ input[type=text].form-control {
 
 // Placeholder text
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: $placeholder-color;
+  color: $placeholder-color !important;
 }
 ::-moz-placeholder { /* Firefox 19+ */
-  color: $placeholder-color;
+  color: $placeholder-color !important;
 }
 :-ms-input-placeholder { /* IE 10+ */
-  color: $placeholder-color;
+  color: $placeholder-color !important;
 }
 :-moz-placeholder { /* Firefox 18- */
-  color: $placeholder-color;
+  color: $placeholder-color !important;
 }
 // Timeframe select list
 .time-frame {
