--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 @import url('https://rsms.me/inter/inter.css');
 $font-family-base: 'Inter', sans-serif;
 
-/* Todo Colors */
+/* Task Colors */
 $today-color: #FF006E;
 $tomorrow-color: #FB5607;
 $thisWeek-color: #FFBE0B;
@@ -57,15 +57,15 @@ input[type=text].form-control {
   border: none !important;
 } 
 // Reset icon buttons
-#newTodo .add-todo,
-.delete-todo.btn {
+#newTask .add-task,
+.delete-task.btn {
   border: none !important;
   background: none !important;
   border-radius: 50%;
 }
 // Add border to activate focus button animation
-#newTodo .add-todo:focus,
-.delete-todo.btn:focus {
+#newTask .add-task:focus,
+.delete-task.btn:focus {
   border: 1px solid white !important;
 }
 // Hide screen reader labels
@@ -131,32 +131,32 @@ input[type=text].form-control {
 }
 
 
-/* New Todo form */
-#newTodo {
+/* New task form */
+#newTask {
   padding: 1.2rem 2.1375rem 1.2rem 2rem; // Match lists container
   background: #FFFFFF;
   box-shadow: 0px 4px 8px $default-shadow-color;
   border-radius: 12px;
 }
-#newTodo:focus-within {
+#newTask:focus-within {
   box-shadow: 0px 4px 32px #DAE0EC;
 }
-#newTodo.today:focus-within {
+#newTask.today:focus-within {
   box-shadow: 0px 4px 32px rgba(255, 0, 110, 0.12);
 }
-#newTodo.tomorrow:focus-within {
+#newTask.tomorrow:focus-within {
   box-shadow: 0px 4px 32px rgba(251, 86, 7, 0.12);
 }
-#newTodo.thisWeek:focus-within {
+#newTask.thisWeek:focus-within {
   box-shadow: 0px 4px 32px rgba(255, 190, 11, 0.12);
 }
-#newTodo .description {
+#newTask .description {
   padding-left: 0.5rem;
 }
-#newTodo .time-frame {
+#newTask .time-frame {
   margin: 0.375rem 0; // Match form-control padding
 }
-#newTodo .add-todo {
+#newTask .add-task {
   // border: 0;
   width: 3rem;
   height: 3rem;
@@ -165,34 +165,34 @@ input[type=text].form-control {
   // border-radius: 50%;
 }
 // Plus color
-#newTodo .add-todo .plus {
+#newTask .add-task .plus {
   stroke: $noDate-color;
 }
-#newTodo.today .add-todo .plus,
-#newTodo.tomorrow .add-todo .plus,
-#newTodo.thisWeek .add-todo .plus,
-#newTodo.noDate .add-todo .plus {
+#newTask.today .add-task .plus,
+#newTask.tomorrow .add-task .plus,
+#newTask.thisWeek .add-task .plus,
+#newTask.noDate .add-task .plus {
   stroke: white;
 }
 // Circle color
-#newTodo .add-todo .plus-circle {
+#newTask .add-task .plus-circle {
   fill: #F9FAFB;
 }
-#newTodo.today .add-todo .plus-circle {
+#newTask.today .add-task .plus-circle {
   fill: $today-color;
 }
-#newTodo.tomorrow .add-todo .plus-circle {
+#newTask.tomorrow .add-task .plus-circle {
   fill: $tomorrow-color;
 }
-#newTodo.thisWeek .add-todo .plus-circle {
+#newTask.thisWeek .add-task .plus-circle {
   fill: $thisWeek-color;
 }
-#newTodo.noDate .add-todo .plus-circle {
+#newTask.noDate .add-task .plus-circle {
   fill: #3D404B;
 }
 
 
-/* Todo Lists */
+/* task Lists */
 .lists {
   margin-top: 3.5rem;
 }
@@ -265,26 +265,26 @@ input[type=text].form-control {
 }
 
 
-/* Todo */
+/* task */
 .list ul {
   list-style-type: none;
   padding: 0;
 }
-.todo {
+.task {
   padding: 1.2rem 1.2rem 1.2rem 1.2rem;
   box-shadow: 0px 1px 0px $default-shadow-color;
 }
-.todo:last-child {
+.task:last-child {
   box-shadow: none;
 }
-.complete-todo {
+.complete-task {
   margin-left: 1.25rem;
   padding-left: 0.125rem !important;
   max-width: 4rem !important;
   width: 4rem !important;
   flex: 0 0 4rem !important;
 }
-.complete-todo .btn {
+.complete-task .btn {
   width: 2.25rem;
   height: 2.25rem;
   background-color: white !important;
@@ -292,19 +292,19 @@ input[type=text].form-control {
   border-radius: 50%;
   display: inline-block;
 }
-.completed .complete-todo .btn {
+.completed .complete-task .btn {
   border-color: $completed-color !important;
   // background-color: white;
   padding: 0;
 }
-.complete-todo .btn:focus {
+.complete-task .btn:focus {
   background-color: white !important;
   border: 2px solid #E4E8F1 !important;
 }
 
 // .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary
 
-.delete-todo.btn {
+.delete-task.btn {
   padding-top: 0.3125rem;
   // background: none !important;
   // border: none !important;
