Fix comment bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -69,7 +69,8 @@ header h1 {
 // #newTask .add-task:focus,
 // .delete-task.btn:focus {
 //   border: 1px solid white !important;
-}
+// }
+
 // Hide screen reader labels
 .invisible,
 .sr-only {
@@ -152,6 +153,7 @@ header h1 {
 // #newTask.thisWeek:focus-within {
 //   box-shadow: 0px 4px 32px rgba(255, 190, 11, 0.12);
 // }
+
 // #newTask .description {
 //   padding-left: 0.5rem;
 // }
