--- a/src/App.scss
+++ b/src/App.scss
@@ -17,23 +17,6 @@ body {
   color: #0A1323 !important;
 }
 
-.description,
-.description .form-control {
-  font-size: 1.5rem;
-  // color: #0A1323 !important;
-}
-.lists .description {
-  padding-left: 0 !important;
-}
-// .lists.container {
-//   padding: 0 1.2rem;
-// }
-@media (max-width: 768px) { 
-  .lists .description {
-    padding-bottom: 0.75rem;
-  }
-}
-
 /* Logo */
 header {
   margin: 2em auto;  
@@ -48,6 +31,51 @@ header h1 {
   letter-spacing: -0.02em;
   margin: auto;
 }
+
+// Hide screen reader labels
+.invisible,
+.sr-only {
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+// Input Focus
+*:focus {
+  border: none !important;
+  box-shadow: none !important;
+  outline: 0;
+}
+
+// .container {
+//   width: 100%;
+//   padding: 0 1rem;
+//   margin-right: auto;
+//   margin-left: auto;
+// }
+
+
+// .description,
+// .description .form-control {
+//   font-size: 1.5rem;
+//   // color: #0A1323 !important;
+// }
+// .lists .description {
+//   padding-left: 0 !important;
+// }
+// // .lists.container {
+// //   padding: 0 1.2rem;
+// // }
+// @media (max-width: 768px) { 
+//   .lists .description {
+//     padding-bottom: 0.75rem;
+//   }
+// }
+
+
 
 /* General Forms */
 // button {
@@ -71,67 +99,54 @@ header h1 {
 //   border: 1px solid white !important;
 // }
 
-// Hide screen reader labels
-.invisible,
-.sr-only {
-  clip: rect(0 0 0 0);
-  clip-path: inset(100%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-}
-// Input Focus
-*:focus {
-  border: 0 !important;
-  box-shadow: none !important;
-}
 
-// Placeholder text
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: $placeholder-color !important;
-}
-::-moz-placeholder { /* Firefox 19+ */
-  color: $placeholder-color !important;
-}
-:-ms-input-placeholder { /* IE 10+ */
-  color: $placeholder-color !important;
-}
-:-moz-placeholder { /* Firefox 18- */
-  color: $placeholder-color !important;
-}
+
+// // Placeholder text
+// ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+//   color: $placeholder-color !important;
+// }
+// ::-moz-placeholder { /* Firefox 19+ */
+//   color: $placeholder-color !important;
+// }
+// :-ms-input-placeholder { /* IE 10+ */
+//   color: $placeholder-color !important;
+// }
+// :-moz-placeholder { /* Firefox 18- */
+//   color: $placeholder-color !important;
+// }
+
+
 // Timeframe select list
-.time-frame {
-  border-radius: 6.25rem !important;
-  border-width: 0 !important;
-}
-.today .time-frame {
-  background: rgba(255, 0, 110, 0.08) !important;
-  color: $today-color !important;
-}
-.tomorrow .time-frame {
-  background: rgba(251, 86, 7, 0.08) !important;
-  color: $tomorrow-color !important;
-}
-.thisWeek .time-frame {
-  background: rgba(255, 190, 11, 0.08) !important;
-  color: $thisWeek-color !important;
-}
-.noDate .time-frame {
-  background: #F9FAFB !important;
-  color: #6B6F7C !important;
-}
-.completed .time-frame {
-  background: rgba(3, 206, 164, 0.04);
-  color: $completed-color
-}
+// .time-frame {
+//   border-radius: 6.25rem !important;
+//   border-width: 0 !important;
+// }
+// .today .time-frame {
+//   background: rgba(255, 0, 110, 0.08) !important;
+//   color: $today-color !important;
+// }
+// .tomorrow .time-frame {
+//   background: rgba(251, 86, 7, 0.08) !important;
+//   color: $tomorrow-color !important;
+// }
+// .thisWeek .time-frame {
+//   background: rgba(255, 190, 11, 0.08) !important;
+//   color: $thisWeek-color !important;
+// }
+// .noDate .time-frame {
+//   background: #F9FAFB !important;
+//   color: #6B6F7C !important;
+// }
+// .completed .time-frame {
+//   background: rgba(3, 206, 164, 0.04);
+//   color: $completed-color
+// }
 
 
 /* General layout */
-.col.last {
-  text-align: right;
-}
+// .col.last {
+//   text-align: right;
+// }
 
 
 /* New task form */
