--- a/src/App.scss
+++ b/src/App.scss
@@ -2,16 +2,7 @@
 @import url('https://rsms.me/inter/inter.css');
 $font-family-base: 'Inter', sans-serif;
 
-/* Task Colors */
-$today-color: #FF006E;
-$tomorrow-color: #FB5607;
-$thisWeek-color: #FFBE0B;
-$noDate-color: #9D9FA7;
-$completed-color: #03CEA4;
-$default-shadow-color: #EBEEF5;
-$placeholder-color: #848791;
-
-/* Base Styles */
+/* Body Styles */
 body {
   background-color: #F9FAFC !important;
   color: #0A1323 !important;
@@ -32,7 +23,7 @@ header h1 {
   margin: auto;
 }
 
-// Hide screen reader labels
+/* Hide screen reader labels */
 .invisible,
 .sr-only {
   clip: rect(0 0 0 0);
@@ -45,290 +36,10 @@ header h1 {
 }
 // Input Focus
 *:focus {
-  border: none !important;
-  box-shadow: none !important;
-  outline: 0;
+  // border: none !important;
+  // box-shadow: none !important;
+  // outline: 0;
 }
-
-// .container {
-//   width: 100%;
-//   padding: 0 1rem;
-//   margin-right: auto;
-//   margin-left: auto;
-// }
-
-
-// .description,
-// .description .form-control {
-//   font-size: 1.5rem;
-//   // color: #0A1323 !important;
-// }
-// .lists .description {
-//   padding-left: 0 !important;
-// }
-// // .lists.container {
-// //   padding: 0 1.2rem;
-// // }
-// @media (max-width: 768px) { 
-//   .lists .description {
-//     padding-bottom: 0.75rem;
-//   }
-// }
-
-
-
-/* General Forms */
-// button {
-//   border: none;
-//   background: none;
-// }
-// Remove border from inputs
-// input[type=text].form-control {
-//   border: none !important;
-// } 
-// Reset icon buttons
-// #newTask .add-task,
-// .delete-task.btn {
-//   border: none !important;
-//   background: none !important;
-//   border-radius: 50%;
-// }
-// // Add border to activate focus button animation
-// #newTask .add-task:focus,
-// .delete-task.btn:focus {
-//   border: 1px solid white !important;
-// }
-
-
-
-// // Placeholder text
-// ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-//   color: $placeholder-color !important;
-// }
-// ::-moz-placeholder { /* Firefox 19+ */
-//   color: $placeholder-color !important;
-// }
-// :-ms-input-placeholder { /* IE 10+ */
-//   color: $placeholder-color !important;
-// }
-// :-moz-placeholder { /* Firefox 18- */
-//   color: $placeholder-color !important;
-// }
-
-
-// Timeframe select list
-// .time-frame {
-//   border-radius: 6.25rem !important;
-//   border-width: 0 !important;
-// }
-// .today .time-frame {
-//   background: rgba(255, 0, 110, 0.08) !important;
-//   color: $today-color !important;
-// }
-// .tomorrow .time-frame {
-//   background: rgba(251, 86, 7, 0.08) !important;
-//   color: $tomorrow-color !important;
-// }
-// .thisWeek .time-frame {
-//   background: rgba(255, 190, 11, 0.08) !important;
-//   color: $thisWeek-color !important;
-// }
-// .noDate .time-frame {
-//   background: #F9FAFB !important;
-//   color: #6B6F7C !important;
-// }
-// .completed .time-frame {
-//   background: rgba(3, 206, 164, 0.04);
-//   color: $completed-color
-// }
-
-
-/* General layout */
-// .col.last {
-//   text-align: right;
-// }
-
-
-/* New task form */
-// #newTask {
-//   padding: 1.2rem 2.1375rem 1.2rem 2rem; // Match lists container
-//   background: #FFFFFF;
-//   box-shadow: 0px 4px 8px $default-shadow-color;
-//   border-radius: 12px;
-// }
-// #newTask:focus-within {
-//   box-shadow: 0px 4px 32px #DAE0EC;
-// }
-// #newTask.today:focus-within {
-//   box-shadow: 0px 4px 32px rgba(255, 0, 110, 0.12);
-// }
-// #newTask.tomorrow:focus-within {
-//   box-shadow: 0px 4px 32px rgba(251, 86, 7, 0.12);
-// }
-// #newTask.thisWeek:focus-within {
-//   box-shadow: 0px 4px 32px rgba(255, 190, 11, 0.12);
-// }
-
-// #newTask .description {
-//   padding-left: 0.5rem;
-// }
-// #newTask .time-frame {
-//   margin: 0.375rem 0; // Match form-control padding
-// }
-// #newTask .add-task {
-//   width: 3rem;
-//   height: 3rem;
-//   padding: 0;
-
-//   // border: 0;
-//   // background: none;
-//   // border-radius: 50%;
-// }
-// // Plus color
-// #newTask .add-task .plus {
-//   stroke: $noDate-color;
-// }
-// #newTask.today .add-task .plus,
-// #newTask.tomorrow .add-task .plus,
-// #newTask.thisWeek .add-task .plus,
-// #newTask.noDate .add-task .plus {
-//   stroke: white;
-// }
-// // Circle color
-// #newTask .add-task .plus-circle {
-//   fill: #F9FAFB;
-// }
-// #newTask.today .add-task .plus-circle {
-//   fill: $today-color;
-// }
-// #newTask.tomorrow .add-task .plus-circle {
-//   fill: $tomorrow-color;
-// }
-// #newTask.thisWeek .add-task .plus-circle {
-//   fill: $thisWeek-color;
-// }
-// #newTask.noDate .add-task .plus-circle {
-//   fill: #3D404B;
-// }
-
-
-/* task Lists */
-// .lists {
-//   margin-top: 3.5rem;
-// }
-// .lists h2 {
-//   font-weight: 600;
-//   font-size: 1.5rem;
-//   line-height: 2.25rem;
-//   letter-spacing: -0.02em;
-//   padding: 0 0 0 4rem;
-//   margin-bottom: 0;
-// }
-// .lists .heading {
-//   padding: 1.56rem 1.2rem 1.56rem 1.56rem;
-// }
-// .list {
-//   background: #FFFFFF;
-//   box-shadow: 0px 4px 8px $default-shadow-color;
-//   border-radius: 12px;
-// }
-// .list .count {
-//   font-size: 1.125rem;
-//   color: #6B6F7C;
-// }
-// .today h2 {
-//   color: $today-color;
-//   background: url(/images/inbox.svg) no-repeat left center;
-//   fill: $today-color;
-// }
-// .tomorrow h2 {
-//   color: $tomorrow-color;
-//   background: url(/images/sun.svg) no-repeat left center;
-//   fill: $tomorrow-color;
-// }
-// .thisWeek h2 {
-//   color: $thisWeek-color;
-//   background: url(/images/calendar.svg) no-repeat left center;
-//   fill: $thisWeek-color;
-// }
-// .noDate h2 {
-//   color: $noDate-color;
-//   background: url(/images/folder.svg) no-repeat left center;
-//   fill: $noDate-color;
-// }
-// .completed h2 {
-//   color: $completed-color;
-//   fill: $completed-color;
-// }
-
-/* Completed List */
-#complete-container.hide .completed {
-  display: none;
-}
-#complete-container.show .completed {
-  display: block;
-}
-#complete-container h3 {
-  font-size: 1.125rem;
-  color: #3B424E;
-  text-align: center;
-  margin: 3rem 0;
-}
-#complete-container h3 a,
-#complete-container h3 a:visited {
-  text-decoration: none;
-  color: #3B424E;
-}
-
-#complete-container h3.none {
-  color: $placeholder-color;
-}
-
-
-/* task */
-.list ul {
-  list-style-type: none;
-  padding: 0;
-}
-// .task {
-//   padding: 1.2rem 1.2rem 1.2rem 1.2rem;
-//   box-shadow: 0px 1px 0px $default-shadow-color;
-// }
-// .task:last-child {
-//   box-shadow: none;
-// }
-// .complete-task {
-//   margin-left: 1.25rem;
-//   padding-left: 0.125rem !important;
-//   max-width: 4rem !important;
-//   width: 4rem !important;
-//   flex: 0 0 4rem !important;
-// }
-// .complete-task .btn {
-//   width: 2.25rem;
-//   height: 2.25rem;
-//   background-color: white !important;
-//   border: 2px solid #E4E8F1 !important;
-//   border-radius: 50%;
-//   display: inline-block;
-// }
-// .completed .complete-task .btn {
-//   border-color: $completed-color !important;
-//   // background-color: white;
-//   padding: 0;
-// }
-// .complete-task .btn:focus {
-//   background-color: white !important;
-//   border: 2px solid #E4E8F1 !important;
-// }
-
-// .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary
-
-// .delete-task.btn {
-//   padding-top: 0.3125rem;
-//   // background: none !important;
-//   // border: none !important;
-// }
 
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
