--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,6 @@
 /* Import Inter Font */
 @import url('https://rsms.me/inter/inter.css');
 // $font-family-base: 'Inter', sans-serif;
-
 :root {
   --font-family-sans-serif: 'Inter', sans-serif;
 }
@@ -46,12 +45,12 @@ header h1 {
   white-space: nowrap;
   width: 1px;
 }
-// Input Focus
-*:focus {
+/* Input Focus */
+// *:focus {
   // border: none !important;
   // box-shadow: none !important;
   // outline: 0;
-}
+// }
 
 // Import Bootstrap and its default variables
 // @import '~bootstrap/scss/bootstrap.scss';
